--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,6 @@ REACT_APP_SOUND_BUTTON_PRESSED=
 REACT_APP_SOUND_GOOD_RESULT=
 REACT_APP_SOUND_HU=
 
-REACT_APP_ODOO_URL=
-REACT_APP_ODOO_PORT=
-REACT_APP_ODOO_DB=
-REACT_APP_ODOO_USERNAME=
-REACT_APP_ODOO_PASSWORD=
+TOKEN_ODOO=
+USERNAME=
+BRANCH_NAME=
