--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 GENERATE_SOURCEMAP=false
 
+TOKEN_ODOO=9s8UXnLBoJqOyiB2
+USERNAME=operasabun
+BRANCH_NAME=Windsor
+
 REACT_APP_SOUND_BAD_MACHINE=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902626/bad-machine_pgaxfz.mp3
 REACT_APP_SOUND_BUTTON_NEGATIIVE=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902627/button-negative_vxwtyl.mp3
 REACT_APP_SOUND_BUTTON_PRESSED=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902627/button-pressed_dfpgqd.mp3
