--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "@types/xmlrpc": "^1.3.10",
     "assert": "^2.1.0",
