--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ TOKEN_ODOO=9s8UXnLBoJqOyiB2
 USERNAME=operasabun
 BRANCH_NAME=Sei panas
 BRANCH_ID=7
+  // "proxy": "http://0.0.0.0:8016"
+HTTPS_API=
 
 REACT_APP_SOUND_BAD_MACHINE=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902626/bad-machine_pgaxfz.mp3
 REACT_APP_SOUND_BUTTON_NEGATIIVE=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902627/button-negative_vxwtyl.mp3
