--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "odoo-react": "^1.0.2",
     "odoo-xmlrpc": "^1.0.8",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -118,5 +119,5 @@
       "react-app"
     ]
   },
-  "proxy": "https://nubipay.id"
+  "proxy": "http://0.0.0.0:8016"
 }
