--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ REACT_APP_SOUND_BUTTON_NEGATIIVE=https://res.cloudinary.com/dkxor4kjf/video/uplo
 REACT_APP_SOUND_BUTTON_PRESSED=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902627/button-pressed_dfpgqd.mp3
 REACT_APP_SOUND_GOOD_RESULT=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902627/goodresult_mdcish.mp3
 REACT_APP_SOUND_HURRAY=https://res.cloudinary.com/dkxor4kjf/video/upload/v1731902628/hurray_ekzvmx.mp3
+
+VITE_ODOO_BASE_URL=https://nubipay.id
